# kmeans

./: KMeans.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: KMeans_from_scratch-checkpoint.ipynb
